Ajuste de información retornada basado en pruebas realizadas
